mpegvideoparse: Fix switch statement in level detection code

Properly fall through the cases without re-assigning the level to
the wrong value.

https://bugzilla.gnome.org/show_bug.cgi?id=706369